Implement security filters (#12)
* refactor(back): utiliser les dependances cantralisés pour les plateformes

* refactor(back-user): protection des route sur le service user

* refactor(back): filters fonctionnels sur les  deux services

* fix(back-user): refresh route was verifiying the access token and not only the refresh token

* refactor(back): document les spring boot security configs

* fix(back-user): verifie l'existence du credential lors du refresh